--- a/blog.html
+++ b/blog.html
@@ -131,7 +131,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">El gol de la muerte</p>
+				    			<p class="titulo"><a href="">El gol de la muerte</a></p>
 				    			<br>
 				    			<br>
 			    			</div>
@@ -153,7 +153,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">Dios ha muerto... tengo las manos cubiertas de sangre</p>
+				    			<p class="titulo"><a href="">Dios ha muerto... tengo las manos cubiertas de sangre</a></p>
 			    			</div>
 			    			<div class="gris">
 			    				<div class="row">
@@ -173,7 +173,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">Cual es tu queso favorito?</p>
+				    			<p class="titulo"><a href="">¿Cual es tu queso favorito?</a></p>
 				    			<br>
 			    			</div>
 			    			<div class="gris">
@@ -197,7 +197,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">El gol de la muerte</p>
+				    			<p class="titulo"><a href="">El gol de la muerte</a></p>
 				    			<br>
 				    			<br>
 			    			</div>
@@ -219,7 +219,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">Dios ha muerto... tengo las manos cubiertas de sangre</p>
+				    			<p class="titulo"><a href="">Dios ha muerto... tengo las manos cubiertas de sangre</a></p>
 			    			</div>
 			    			<div class="gris">
 			    				<div class="row">
@@ -239,7 +239,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">Cual es tu queso favorito?</p>
+				    			<p class="titulo"><a href="">¿Cual es tu queso favorito?</a></p>
 				    			<br>
 			    			</div>
 			    			<div class="gris">
@@ -263,7 +263,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">El gol de la muerte</p>
+				    			<p class="titulo"><a href="">El gol de la muerte</a></p>
 				    			<br>
 				    			<br>
 			    			</div>
@@ -285,7 +285,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">Dios ha muerto... tengo las manos cubiertas de sangre</p>
+				    			<p class="titulo"><a href="">Dios ha muerto... tengo las manos cubiertas de sangre</a></p>
 			    			</div>
 			    			<div class="gris">
 			    				<div class="row">
@@ -305,7 +305,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">Cual es tu queso favorito?</p>
+				    			<p class="titulo"><a href="">¿Cual es tu queso favorito?</a></p>
 				    			<br>
 			    			</div>
 			    			<div class="gris">
@@ -329,7 +329,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">El gol de la muerte</p>
+				    			<p class="titulo"><a href="">El gol de la muerte</a></p>
 				    			<br>
 				    			<br>
 			    			</div>
@@ -351,7 +351,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">Dios ha muerto... tengo las manos cubiertas de sangre</p>
+				    			<p class="titulo"><a href="">Dios ha muerto... tengo las manos cubiertas de sangre</a></p>
 			    			</div>
 			    			<div class="gris">
 			    				<div class="row">
@@ -371,7 +371,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">Cual es tu queso favorito?</p>
+				    			<p class="titulo"><a href="">¿Cual es tu queso favorito?</a></p>
 				    			<br>
 			    			</div>
 			    			<div class="gris">
@@ -395,7 +395,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">El gol de la muerte</p>
+				    			<p class="titulo"><a href="">El gol de la muerte</a></p>
 				    			<br>
 				    			<br>
 			    			</div>
@@ -417,7 +417,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">Dios ha muerto... tengo las manos cubiertas de sangre</p>
+				    			<p class="titulo"><a href="">Dios ha muerto... tengo las manos cubiertas de sangre</a></p>
 			    			</div>
 			    			<div class="gris">
 			    				<div class="row">
@@ -437,7 +437,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">Cual es tu queso favorito?</p>
+				    			<p class="titulo"><a href="">¿Cual es tu queso favorito?</a></p>
 				    			<br>
 			    			</div>
 			    			<div class="gris">
@@ -461,7 +461,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">El gol de la muerte</p>
+				    			<p class="titulo"><a href="">El gol de la muerte</a></p>
 				    			<br>
 				    			<br>
 			    			</div>
@@ -483,7 +483,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">Dios ha muerto... tengo las manos cubiertas de sangre</p>
+				    			<p class="titulo"><a href="">Dios ha muerto... tengo las manos cubiertas de sangre</a></p>
 			    			</div>
 			    			<div class="gris">
 			    				<div class="row">
@@ -503,7 +503,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">Cual es tu queso favorito?</p>
+				    			<p class="titulo"><a href="">¿Cual es tu queso favorito?</a></p>
 				    			<br>
 			    			</div>
 			    			<div class="gris">
@@ -527,7 +527,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">El gol de la muerte</p>
+				    			<p class="titulo"><a href="">El gol de la muerte</a></p>
 				    			<br>
 				    			<br>
 			    			</div>
@@ -549,7 +549,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">Dios ha muerto... tengo las manos cubiertas de sangre</p>
+				    			<p class="titulo"><a href="">Dios ha muerto... tengo las manos cubiertas de sangre</a></p>
 			    			</div>
 			    			<div class="gris">
 			    				<div class="row">
@@ -569,7 +569,7 @@
 			    		<div class="box">
 				    		<div class="datos">
 				    			<p class="fecha">Lunes, 14 de julio de 2015</p>
-				    			<p class="titulo">Cual es tu queso favorito?</p>
+				    			<p class="titulo"><a href="">¿Cual es tu queso favorito?</a></p>
 				    			<br>
 			    			</div>
 			    			<div class="gris">
