--- a/columnistas.html
+++ b/columnistas.html
@@ -8,20 +8,130 @@
 		
 	<link href="assets/css/main.css" rel="stylesheet">
 	<link href="assets/css/dist/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/dist/font-awesome.min.css">
 </head>
-<!--  -->
 <body>
+<!-- Header /ELISA -->
+	<header>
+		<section class="bg-gris">
+			<div class="container">
+				<!-- Banner Top -->
+				<div class="row">
+					<div class="col-md-12">
+						<img class="banner-top" src="assets/image/banner_top.jpg" alt="Banner Top">
+					</div>
+				</div>
+				<!-- Primer Menu -->
+				<div class="row">
+					<div class="col-md-6 col-xs-12 menu1">
+						<ul>
+							<li><a href="#">LIBERO.PE</a></li>
+							<li><a href="#">ELPOPULAR.PE</a></li>
+							<li><a href="#">FUNDACION GUSTAVO  MOHME LLONA</a></li>
+						</ul>
+					</div>
+					<div class="col-md-6 col-xs-12 menu2 text-right">
+						<button class="btn btn-danger">SUSCRIBETE AL BOLETIN</button>
+						<a href="#"><i class="facebook fa fa-facebook"></i></a>
+						<a href="#"><i class="twitter fa fa-twitter"></i></a>
+						<a href="#"><i class="google-plus fa fa-google-plus"></i>
+						<a href="#"><i class="envelope fa fa-envelope"></i></a>
+						<a href="#"><i class="rss fa fa-rss"></i>
+					</div></a>
+				</div>
+			</div>
+		</section>
+		<!-- Segunda linea de menu - logo LA REPUBLICA -->
+		<div class="container">
+			<img class="logo" src="assets/image/logo-la-republica.jpg" alt="">
+			<img class="menu-banner" src="assets/image/menu-banner.png" alt="">
+		</div>
+		<!-- Menu Rojo -->
+		<div class="container">
+			<nav class="navbar navbar-inverse">
+				<ul class="nav navbar-nav">
+					<li role="presentation" class="active"><a href="#">POLITICA</a></li>
+					<li role="presentation"><a href="#">ECONOMIA</a></li>
+					<li role="presentation"><a href="#">SOCIEDAD</a></li>
+					<li role="presentation"><a href="#">ELECC. REGIONALES</a></li>
+					<li role="presentation"><a href="#">DEPORTES</a></li>
+					<li role="presentation"><a href="#">CHAMPIONS L.</a></li>
+					<li role="presentation"><a href="#">ESPECTACULOS</a></li>
+					<li role="presentation"><a href="#">ED. IMPRESA</a></li>
+					<li role="presentation"><a href="#">REGIONALES</a></li>
+					<li class="dropdown" role="presentation">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">MAS SECCIONES <span class="caret"></span></a>
+				        <ul class="dropdown-menu">
+				        	<li><a href="#">Action</a></li>
+				        	<li><a href="#">Another action</a></li>
+				        	<li><a href="#">Something else here</a></li>
+						</ul>
+					</li>
+				</ul>
+			</nav>
+		</div>
+		<!-- Banners a los lados -->
+		<img class="banner-izq" src="assets/image/banner-izq.png" alt="">
+		<img class="banner-der" src="assets/image/banner-der.png" alt="">
+		<!-- Menu gris -->
+		<div class="container">
+			<ul class="nav navbar-nav menu-gris">
+				<li class="bg-negro">
+					<a href="#">TEMAS DEL DIA</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-angle-left"></i>Globos de oro<img src="assets/image/bullet.gif" alt="">
+					</a>
+				</li>
+				<li>
+					<a href="#">Youtube<img src="assets/image/bullet.gif" alt="">
+					</a>
+				</li>
+				<li>
+					<a href="#">PNP<img src="assets/image/bullet.gif" alt="">
+					</a>
+				</li>
+				<li>
+					<a href="#">Charlie Hebdo<img src="assets/image/bullet.gif" alt=""></a>
+				</li>
+				<li>
+					<a href="#">FC Barcelona<img src="assets/image/bullet.gif" alt=""></a>
+				</li>
+				<li>
+					<a href="#">Alianza Lima<img src="assets/image/bullet.gif" alt=""></a>
+				</li>
+				<li>
+					<a href="#">ED. IMPRESA<img src="assets/image/bullet.gif" alt=""></a>
+				</li>
+				<li>
+					<a href="#">Balon de Oro<img src="assets/image/bullet.gif" alt=""></a>
+				</li>
+				<li>
+					<a href="#">Alianza Lima<img src="assets/image/bullet.gif" alt=""></a>
+				</li>
+				<li>
+					<a href="#">Balon<i class="fa fa-angle-right"></i></a>
+				</li>
+				
+			</ul>
+		</div>
+		<!-- Banner Header -->
+		<div class="container">
+			<img class="banner-header" src="assets/image/banner-header.jpg" alt="">
+		</div>
+	</header>
+	<!-- GABY -->
 	<section>
 		<div class="container">
 	 		<div class="row">
 	 			<div class="col-md-12 col-sm-6">
-	 				<h1>Columnistas</h1>
+	 				<h1><b>Columnistas</b></i></h1>
 	 			</div>
 	 		</div>
 
 	 			<div class="row">
 		 			<div class="col-md-12 col-sm-6">
-						<h5>LO ÚLTIMO EN COLUMNISTAS</h5>
+						<h5>LO ÚLTIMO EN COLUMNISTAS<img src="assets/image/double-arrow-bottom.png"></h5>
 		 			</div>
 		 		</div>
 				<!--1era caja 1er row -->
@@ -30,7 +140,8 @@
 		 		   		<div class="caja">
 		 		   			<div class="margen">
 		 		      		<p>Lunes, 14 de julio del 2015</p>
-		 		      		<h4>El gol de la muerte</h4>	
+		 		      		<h4>El gol de la muerte</h4>
+		 		      		<br>	
 		 		    	</div>
 		 		  		<div class="gray">
 		 		  			<div class="col-md-3">
@@ -48,7 +159,7 @@
 		 		   		<div class="caja">
 		 		   			<div class="margen">
 		 		      		<p>Lunes, 14 de julio del 2015</p>
-		 		      		<h4>El gol de la muerte</h4>
+		 		      		<h4>Dios ha muerto..tengo las manos cubiertas de sandre</h4>
 		 		    	</div>
 		 		  		<div class="gray">
 		 		  			<div class="col-md-3">
@@ -66,7 +177,8 @@
 		 		   		<div class="caja">
 		 		   			<div class="margen">
 		 		      		<p>Lunes, 14 de julio del 2015</p>
-		 		      		<h4>El gol de la muerte</h4>
+		 		      		<h4>¿Cual es tu queso favorito?</h4>
+		 		      		<br>
 		 		    	</div>
 		 		  		<div class="gray">
 		 		  			<div class="col-md-3">
@@ -88,7 +200,8 @@
 		 		   		<div class="caja">
 		 		   			<div class="margen">
 		 		      		<p>Lunes, 14 de julio del 2015</p>
-		 		      		<h4>El gol de la muerte</h4>	
+		 		      		<h4>El gol de la muerte</h4>
+		 		      		<br>	
 		 		    	</div>
 		 		  		<div class="gray">
 		 		  			<div class="col-md-3">
@@ -101,12 +214,12 @@
 		 				</div>
 		 				</div>
 		 		  	</div>
-					<!--2era caja -->
+					<!--2da caja -->
 		 		  	<div class=" col-md-4">
 		 		   		<div class="caja">
 		 		   			<div class="margen">
 		 		      		<p>Lunes, 14 de julio del 2015</p>
-		 		      		<h4>El gol de la muerte</h4>
+		 		      		<h4>Dios ha muerto..tengo las manos cubiertas de sandre</h4>
 		 		    	</div>
 		 		  		<div class="gray">
 		 		  			<div class="col-md-3">
@@ -124,7 +237,8 @@
 		 		   		<div class="caja">
 		 		   			<div class="margen">
 		 		      		<p>Lunes, 14 de julio del 2015</p>
-		 		      		<h4>El gol de la muerte</h4>
+		 		      		<h4>¿Cual es tu queso favorito?</h4>
+		 		      		<br>
 		 		    	</div>
 		 		  		<div class="gray">
 		 		  			<div class="col-md-3">
@@ -146,7 +260,8 @@
 		 		   		<div class="caja">
 		 		   			<div class="margen">
 		 		      		<p>Lunes, 14 de julio del 2015</p>
-		 		      		<h4>El gol de la muerte</h4>	
+		 		      		<h4>El gol de la muerte</h4>
+		 		      		<br>	
 		 		    	</div>
 		 		  		<div class="gray">
 		 		  			<div class="col-md-3">
@@ -164,7 +279,7 @@
 		 		   		<div class="caja">
 		 		   			<div class="margen">
 		 		      		<p>Lunes, 14 de julio del 2015</p>
-		 		      		<h4>El gol de la muerte</h4>
+		 		      		<h4>Dios ha muerto..tengo las manos cubiertas de sandre</h4>
 		 		    	</div>
 		 		  		<div class="gray">
 		 		  			<div class="col-md-3">
@@ -182,7 +297,8 @@
 		 		   		<div class="caja">
 		 		   			<div class="margen">
 		 		      		<p>Lunes, 14 de julio del 2015</p>
-		 		      		<h4>El gol de la muerte</h4>
+		 		      		<h4>¿Cual es tu queso favorito?</h4>
+							<br>
 		 		    	</div>
 		 		  		<div class="gray">
 		 		  			<div class="col-md-3">
@@ -203,7 +319,8 @@
 		 		   		<div class="caja">
 		 		   			<div class="margen">
 		 		      		<p>Lunes, 14 de julio del 2015</p>
-		 		      		<h4>El gol de la muerte</h4>	
+		 		      		<h4>El gol de la muerte</h4>
+		 		      		<br>	
 		 		    	</div>
 		 		  		<div class="gray">
 		 		  			<div class="col-md-3">
@@ -221,7 +338,7 @@
 		 		   		<div class="caja">
 		 		   			<div class="margen">
 		 		      		<p>Lunes, 14 de julio del 2015</p>
-		 		      		<h4>El gol de la muerte</h4>
+		 		      		<h4>Dios ha muerto..tengo las manos cubiertas de sandre</h4>
 		 		    	</div>
 		 		  		<div class="gray">
 		 		  			<div class="col-md-3">
@@ -239,7 +356,8 @@
 		 		   		<div class="caja">
 		 		   			<div class="margen">
 		 		      		<p>Lunes, 14 de julio del 2015</p>
-		 		      		<h4>El gol de la muerte</h4>
+		 		      		<h4>¿Cual es tu queso favorito?</h4>
+		 		      		<br>
 		 		    	</div>
 		 		  		<div class="gray">
 		 		  			<div class="col-md-3">
@@ -254,8 +372,161 @@
 		 		  	</div>
 		 		</div>
 		 		<br>
+		 		<!--BOTON -->
+		 		<div class="row">
+					<div class="col-md-5 col-xs-4"></div>
+					<button class=" botn btn btn-danger">TODAS LAS COLUMNAS</button>
+				</div>
+				
+				<!--SECCION TODOS LOS COLUMNISTAS -->		
+				<div class="row">
+				<h5>TODOS LOS COLUMNISTAS<img class="espacio"src="assets/image/double-arrow-bottom.png"></h5>
+				</div>
+
+				<!--NAVBAR -->
+				<center><div class="row red">
+					<div class="btn-group">
+						<button type="button" class="btn btn-danger">TODOS</button>
+						<button type="button" class="btn btn-danger">A B C</button>
+						<button type="button" class="btn btn-danger">D E F</button>
+						<button type="button" class="btn btn-danger">G H I</button>
+						<button type="button" class="btn btn-danger">J K L</button>
+						<button type="button" class="btn btn-danger">M N O</button>
+						<button type="button" class="btn btn-danger">PQRS</button>
+						<button type="button" class="btn btn-danger">T U V</button>
+						<button type="button" class="btn btn-danger">WXYZ</button>
+					</div><center>
+
+
+
+				<!--COLUMNISTAS -->	
+			</div>
 		</div>
 	</section>
+<!-- FOOTER / ELISA -->
+	<footer id="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 col-xs-6 col-izq">
+					<div class="datos text-right">
+						<div>
+							<img src="assets/image/logo-grupo-la-republica.png" alt="">
+						</div>
+						<p><b>Grupo La Republica Digital</b></p>
+						<p>Jr. Camana 320 Cercado de Lima</p>
+						<p>Telefono: 711-6000</p>
+						<p>(Central Telefonica)</p>
+						<p>Todos los derechos reservados-2015</p>
+					</div>
+				</div>
+				<div class="col-md-2 col-xs-6">
+					<ul>
+						<li>Roger Federer</li>
+						<li>SBS</li>
+						<li>Scarlett Johansson</li>
+						<li>Scotiabank</li>
+						<li>Selena Gomez</li>
+						<li>Spiderman</li>
+						<li>Sporting Cristal</li>
+						<li>Sunat</li>
+						<li>Telefonica de Peru</li>
+						<li>The Walking Dead</li>
+						<li>Twitter</li>
+						<li>Universidad Cesar Vallejo</li>
+						<li>Universidad San Martin</li>
+						<li>Universitario de Deportes</li>
+						<li>Xbox</li>
+						<li>Youtube</li>
+						<li>Bayern Munich</li>
+						<li>Bayern Munich</li>
+					</ul>
+				</div>
+				<div class="col-md-2 col-xs-4">
+					<ul>
+						<li>Roger Federer</li>
+						<li>SBS</li>
+						<li>Scarlett Johansson</li>
+						<li>Scotiabank</li>
+						<li>Selena Gomez</li>
+						<li>Spiderman</li>
+						<li>Sporting Cristal</li>
+						<li>Sunat</li>
+						<li>Telefonica de Peru</li>
+						<li>The Walking Dead</li>
+						<li>Twitter</li>
+						<li>Universidad Cesar Vallejo</li>
+						<li>Universidad San Martin</li>
+						<li>Universitario de Deportes</li>
+						<li>Xbox</li>
+						<li>Youtube</li>
+						<li>Bayern Munich</li>
+						<li>Bayern Munich</li>
+					</ul>
+				</div>
+				<div class="col-md-2 col-xs-4">
+					<ul>
+						<li>Roger Federer</li>
+						<li>SBS</li>
+						<li>Scarlett Johansson</li>
+						<li>Scotiabank</li>
+						<li>Selena Gomez</li>
+						<li>Spiderman</li>
+						<li>Sporting Cristal</li>
+						<li>Sunat</li>
+						<li>Telefonica de Peru</li>
+						<li>The Walking Dead</li>
+						<li>Twitter</li>
+						<li>Universidad Cesar Vallejo</li>
+						<li>Universidad San Martin</li>
+						<li>Universitario de Deportes</li>
+						<li>Xbox</li>
+						<li>Youtube</li>
+						<li>Bayern Munich</li>
+						<li>Bayern Munich</li>
+					</ul>
+				</div>
+				<div class="col-md-2 col-xs-4">
+					<ul>
+						<li>Roger Federer</li>
+						<li>SBS</li>
+						<li>Scarlett Johansson</li>
+						<li>Scotiabank</li>
+						<li>Selena Gomez</li>
+						<li>Spiderman</li>
+						<li>Sporting Cristal</li>
+						<li>Sunat</li>
+						<li>Telefonica de Peru</li>
+						<li>The Walking Dead</li>
+						<li>Twitter</li>
+						<li>Universidad Cesar Vallejo</li>
+						<li>Universidad San Martin</li>
+						<li>Universitario de Deportes</li>
+						<li>Xbox</li>
+						<li>Youtube</li>
+						<li>Bayern Munich</li>
+						<li>Bayern Munich</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row text-center">
+				<ul class="breadcrumb">
+					<li>Diarios del PAL:</li>
+					<li>Clarin</li>
+					<li>La Tercera</li>
+					<li>El Universal Colombia</li>
+					<li>El Universal Venezuela</li>
+					<li>Vanguardia</li>
+					<li>La Prensa</li>
+					<li>El Salvador</li>
+					<li>La Verdad</li>
+					<li>Diario Libre</li>
+					<li>El diario de hoy</li>
+					<li>El Colombiano</li>
+				</ul>
+			</div>
+		</div>
+	</footer>
+	
 	<!-- jQuery -->
     <script src="assets/js/jquery.js"></script>
 
