--- a/contacto.html
+++ b/contacto.html
@@ -117,7 +117,7 @@
 			<img class="banner-header" src="assets/image/banner-header.jpg" alt="">
 		</div>
 	</header>
-	<!-- SECTION CONTACTO / RUTH -->
+	<!-- SECTION CONTACTO / RUTH /-->
 	 <section>
         <div class="container">
             <div class="row">
@@ -248,7 +248,7 @@
                       </div>
                       <div class="form-group">
                         <div class="col-md-12">
-                          <button type="submit" class="btn btn-default black col-xs-5">ENVIAR</button>
+                          <button type="submit" class="btn btn-default black col-xs-5 center-block">ENVIAR</button>
                         </div>
                       </div>
                     </form>
@@ -260,7 +260,7 @@
 	<footer id="footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4 col-xs-12 col-izq">
+				<div class="col-md-4 col-xs-6 col-izq">
 					<div class="datos text-right">
 						<div>
 							<img src="assets/image/logo-grupo-la-republica.png" alt="">
@@ -272,7 +272,7 @@
 						<p>Todos los derechos reservados-2015</p>
 					</div>
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-2 col-xs-6">
 					<ul>
 						<li>Roger Federer</li>
 						<li>SBS</li>
@@ -294,7 +294,7 @@
 						<li>Bayern Munich</li>
 					</ul>
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-2 col-xs-4">
 					<ul>
 						<li>Roger Federer</li>
 						<li>SBS</li>
@@ -316,7 +316,7 @@
 						<li>Bayern Munich</li>
 					</ul>
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-2 col-xs-4">
 					<ul>
 						<li>Roger Federer</li>
 						<li>SBS</li>
@@ -338,7 +338,7 @@
 						<li>Bayern Munich</li>
 					</ul>
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-2 col-xs-4">
 					<ul>
 						<li>Roger Federer</li>
 						<li>SBS</li>
